// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseUnit 1`] = `
Array [
  Object {
    "name": "ア",
    "texts": Array [
      "a",
      "b",
    ],
    "type": "select",
  },
  Object {
    "name": "a",
    "type": "input",
  },
]
`;

exports[`parseUnit: parseInputs 1`] = `
Array [
  Object {
    "text": "[ア:a|b]",
    "type": "text",
  },
  Object {
    "name": "a",
    "type": "input",
  },
]
`;

exports[`parseUnit: parseSelects 1`] = `
Array [
  Object {
    "name": "ア",
    "texts": Array [
      "a",
      "b",
    ],
    "type": "select",
  },
  Object {
    "text": "(a)",
    "type": "text",
  },
]
`;

exports[`works: input 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "my name is ",
      "type": "text",
    },
    Object {
      "name": "name",
      "type": "input",
    },
    Object {
      "text": ".",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works: mix 1`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select",
    },
    Object {
      "name": "a",
      "type": "input",
    },
  ],
  "ok": true,
}
`;

exports[`works: multiple 1`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select",
    },
    Object {
      "name": "イ",
      "texts": Array [
        "c",
        "d",
      ],
      "type": "select",
    },
    Object {
      "name": "ウ",
      "texts": Array [
        "e",
        "f",
      ],
      "type": "select",
    },
  ],
  "ok": true,
}
`;

exports[`works: plain 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "kyoko kyoko toshino.",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works: repeat 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "before",
      "type": "text",
    },
    Object {
      "name": "m1",
      "type": "input",
    },
    Object {
      "blocks": Array [
        Object {
          "name": "stage",
          "type": "input",
        },
        Object {
          "text": "（",
          "type": "text",
        },
        Object {
          "name": "rule",
          "texts": Array [
            "a",
            "b",
          ],
          "type": "select",
        },
        Object {
          "text": "）",
          "type": "text",
        },
        Object {
          "name": "result",
          "texts": Array [
            "◯",
            "☓",
          ],
          "type": "select",
        },
      ],
      "name": "buttle",
      "type": "repeat",
    },
    Object {
      "name": "m2",
      "type": "input",
    },
    Object {
      "text": "after",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works: select 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "私は",
      "type": "text",
    },
    Object {
      "name": "poke",
      "texts": Array [
        "ゼニガメ",
        "ヒトカゲ",
        "フシギダネ",
      ],
      "type": "select",
    },
    Object {
      "text": "を選んだ",
      "type": "text",
    },
  ],
  "ok": true,
}
`;
